CORS fix connected with Railway